# FakeXposed

./: .gitmodules  README.md  README_CN.md  build.gradle  build.py  gradle.properties  gradlew  local.properties.sample  settings.gradle
.github/workflows/: android.yml
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/sanfengandroid/datafilter/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/sanfengandroid/fakexposed/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/cpp/: CMakeLists.txt  module_config.h.in
app/src/main/cpp/common/: alog.h  exec_strings.cpp  exec_strings.h  gtype.h  jni_helper.cpp  jni_helper.h  macros.h  maps_util.cpp  maps_util.h  module_config.h  proxy_jni.h  scoped_local_ref.h  scoped_utf_chars.h
app/src/main/cpp/hook/: canonicalize.h  canonicalize_md.c  hook.map.txt  hook_common.cpp  hook_common.h  hook_dlfcn.cpp  hook_dlfcn.h  hook_env.cpp  hook_exec.cpp  hook_exec.h  hook_io.cpp  hook_java_native.cpp  hook_java_native.h  hook_jni_native_interface.cpp  hook_jni_native_interface.h  hook_main.cpp  hook_main.h  hook_properties.cpp  hook_properties.h  hook_stat.cpp  hook_stat.h  hook_string.cpp  hook_syscall.cpp  hook_syscall.h  hook_time.cpp  hook_time.h  hook_unistd.cpp  hook_unistd.h  hook_vfs.cpp  io_redirect.cpp  io_redirect.h
app/src/main/cpp/interface/: linker_export.h  variable_length_object.h
app/src/main/java/com/sanfengandroid/common/: Const.java
app/src/main/java/com/sanfengandroid/datafilter/: SPProvider.java  XPContentProvider.java  XpApplication.java
app/src/main/java/com/sanfengandroid/fakeinterface/: FileAccessMask.java  GlobalConfig.java  Installer.java  MapsMode.java  (+7 more)
app/src/main/res/animator/: button_state_list_anim.xml
app/src/main/res/drawable/: ic_add_black_24dp.xml  ic_arrow_24dp.xml  ic_delete_24dp.xml  ic_descriptor_24dp.xml  ic_donate_24dp.xml  ic_github_24dp.xml  ic_launcher_background.xml  ic_modify_24dp.xml  ic_open_file_24dp.xml  ic_setting_24dp.xml  ic_shared_24dp.xml  ic_state_normal_24dp.xml  ic_state_warning_24dp.xml  ic_sync_24dp.xml  ic_wechat_24dp.xml  ic_wechat_public_24dp.xml
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
app/src/main/res/layout/: appcompat_app_bar.xml  edit_item_dialog_fragment.xml  edit_string_view.xml  file_access_add_view.xml  file_redirect_add_view.xml  fragment_file_access_item.xml  fragment_installed_package_item.xml  fragment_main.xml  fragment_recycler_view.xml  fragment_string_item.xml  item_card_view.xml  item_fragment.xml  item_switch_layout.xml  key_value_add_view_layout.xml  main_activity.xml  main_fragment_item.xml  maps_card_view.xml  maps_rule_add_item.xml  native_test_activity.xml  package_add_item_layout.xml  recycle_add_item_layout.xml  recycle_progress_layout.xml  runtime_exec_add_item.xml  runtime_exec_card_view.xml  select_add_view.xml  settings_activity.xml
app/src/main/res/menu/: menu_edit.xml  menu_main.xml  menu_setting.xml  navigation.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: arrays.xml  attrs.xml  colors.xml  dimens.xml  shape.xml  strings.xml  styles.xml  themes.xml  type.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/xml/: setting_preferences.xml
docs/cn/: app_changes.md
docs/en/: app_changes.md
framework-compile/: build.gradle
framework-compile/src/main/: AndroidManifest.xml
framework-compile/src/main/java/android/app/: ActivityThread.java  LoadedApk.java
gradle/wrapper/: gradle-wrapper.properties
(+104 files in other folders)
